	- Fix a cases sensitivity bug in world loading.
	- Stop using the YamlConfiguration in bukkit for our config handling. We can now support periods in world names.
	- Fix GlobalGroups not loading permission nodes.
	- Fix an error with Logging set to 'OFF' triggering a cast exception.
	- No more null errors from corrupt config.yml's.
	- Give a better error when a subgroup is null.
	- Include the GM version when logging errors.
	- Fix Synchronization on adding subgroups (thanks snowleo).
	- Remove info node support from GlobalGroups. It should not have them as GlobalGroups are only permission collections.
	- Change order of data in Users.yml to [name, Group, SubGroup, Permissions, Info nodes].
	- Add alphabetically sorted user lists.
	- allWorldsDataList now returns fully mirrored worlds which are not identical mirrors (fixes the /manselect list).
	- Add support for Rcon.
	- Prevent GM commands from being used on CommandBlocks.
	- Clear our attachment map upon a manload so we correctly reconfigure a players new permissions.
	- Synchronize the raising of GroupManager events to Bukkit.getServer() (should prevent deadlocks).
	- Synchronize pushing to Bukkit perms to prevent any ConcurrentModificationException.
	- Do not grant any permissions (nor update Bukkit) if the server is in offline mode and the player has the permission node 'groupmanager.noofflineperms'.
	- Negate 'groupmanager.noofflineperms' by default in the owner group.
	- Add support for BukkitForge using 'overworld' as the main world name.
	- Prevent '*' permissions granting the 'groupmanager.noofflineperms' permission.
	- Added '/mancheckw <world>' to inspect which permission files a world is referencing.
	- Add config potion to set if GM commands should be allowed on CommnandBlocks.
	- Catch the error when using an out of date config for 'allow_commandblocks' So it doesn't kill the whole config.
	- '/manselect' will no longer list duplicate worlds.