@@ -215,3 +215,4 @@ v 2.0:
 	- Add config potion to set if GM commands should be allowed on CommnandBlocks.
 	- Catch the error when using an out of date config for 'allow_commandblocks' So it doesn't kill the whole config.
 	- '/manselect' will no longer list duplicate worlds.
+	- Added a new mirroring option in the config of 'all_unnamed_worlds'. This will cause all new or unnamed worlds to use this mirroring.
